--- a/flipkart.html
+++ b/flipkart.html
@@ -238,43 +238,43 @@
                             <ul class="product_list flex" style="position: relative;">
                                 
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="decoretion.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="gard.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="mobilecover.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="s.jpeg" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="sliper.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="sunglass.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="sunscreen.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
