--- a/flipkart.html
+++ b/flipkart.html
@@ -280,13 +280,13 @@
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="softdrink.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
                                 </li>
                                 <li class="product">
-                                    <img src="demo.webp" alt="" class="product_img">
+                                    <img src="mobile.webp" alt="" class="product_img">
                                     <div class="product_name"><b>Moues and Keybord</b></div>
                                     <div class="product_offer">50% off</div>
                                     <div class="product_label">Fashion and footware</div>
